--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Call Backend Cron Endpoint
         run: |
+          if [ -z "${{ secrets.RENDER_EXTERNAL_HOSTNAME }}" ]; then
+            echo "::error::RENDER_EXTERNAL_HOSTNAME secret is not set. Please set it in Settings > Secrets and variables > Actions."
+            exit 1
+          fi
           curl -X POST ${{ secrets.RENDER_EXTERNAL_HOSTNAME }}/api/cron/check \
           -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
           -H "Content-Type: application/json"
