--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,21 +1,21 @@
 name: Check Deadlines
 
 on:
-  schedule:
-    # 1時間ごとに実行 (必要に応じて変更してください)
-    - cron: '0 * * * *'
-  workflow_dispatch: # 手動実行ボタンも有効化
+    schedule:
+        # 毎日JST午前9時 (UTC 0時) に実行
+        - cron: "0 0 * * *"
+    workflow_dispatch: # 手動実行ボタンも有効化
 
 jobs:
-  cron:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Call Backend Cron Endpoint
-        run: |
-          if [ -z "${{ secrets.RENDER_EXTERNAL_HOSTNAME }}" ]; then
-            echo "::error::RENDER_EXTERNAL_HOSTNAME secret is not set. Please set it in Settings > Secrets and variables > Actions."
-            exit 1
-          fi
-          curl -X POST ${{ secrets.RENDER_EXTERNAL_HOSTNAME }}/api/cron/check \
-          -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
-          -H "Content-Type: application/json"
+    cron:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Call Backend Cron Endpoint
+              run: |
+                  if [ -z "${{ secrets.RENDER_EXTERNAL_HOSTNAME }}" ]; then
+                    echo "::error::RENDER_EXTERNAL_HOSTNAME secret is not set. Please set it in Settings > Secrets and variables > Actions."
+                    exit 1
+                  fi
+                  curl -X POST ${{ secrets.RENDER_EXTERNAL_HOSTNAME }}/api/cron/check \
+                  -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
+                  -H "Content-Type: application/json"
