--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,8 +2,8 @@ name: Check Deadlines
 
 on:
     schedule:
-        # 毎日JST午前9時 (UTC 0時) に実行
-        - cron: "0 0 * * *"
+        # 1時間に1回実行 (毎時0分)
+        - cron: "0 * * * *"
     workflow_dispatch: # 手動実行ボタンも有効化
 
 jobs:
