--- a/.github/workflows/schedule_test.yml
+++ b/.github/workflows/schedule_test.yml
@@ -1,13 +1,21 @@
-name: Schedule Test
+name: Check Deadlines
 
 on:
     schedule:
-        - cron: "*/5 * * * *" # 5分ごとに変更
-    workflow_dispatch:
+        # 1時間に1回実行 (毎時23分)
+        - cron: "23 * * * *"
+    workflow_dispatch: # 手動実行ボタンも有効化
 
 jobs:
-    test:
+    cron:
         runs-on: ubuntu-latest
         steps:
-            - name: Echo a message
-              run: echo "Hello from the 5-minute schedule!"
+            - name: Call Backend Cron Endpoint
+              run: |
+                  if [ -z "${{ secrets.RENDER_EXTERNAL_HOSTNAME }}" ]; then
+                    echo "::error::RENDER_EXTERNAL_HOSTNAME secret is not set. Please set it in Settings > Secrets and variables > Actions."
+                    exit 1
+                  fi
+                  curl -sfS -X POST ${{ secrets.RENDER_EXTERNAL_HOSTNAME }}/api/cron/check \
+                  -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
+                  -H "Content-Type: application/json"
