--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
 # This file tells Railway's build system (Nixpacks) exactly what to do.
 
-# We don't need any language providers like Go or Node.js.
-providers = []
-
 [phases.setup]
-# We don't need to install any system packages.
-aptPkgs = []
+# We need curl for the cron job.
+aptPkgs = ["curl"]
 
 [phases.build]
 # We don't have anything to build.
