--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,9 +6,9 @@ aptPkgs = ["curl"]
 
 [phases.build]
 # We don't have anything to build.
-cmds = ["echo 'Build phase is explicitly skipped.'"]
+cmds = ["chmod +x start.sh", "echo 'Build phase is explicitly skipped.'"]
 
 [start]
 # This is the only command that will run when the container starts.
 # It does nothing but wait forever, keeping the container alive for cron jobs.
-cmd = "sleep infinity"
+cmd = "./start.sh"
