--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ aptPkgs = ["curl"]
 # 動作確認のため、1分おきか5分おきに設定してテストするのがおすすめ
 schedule = "* * * * *" 
 # --max-time 600 (10分間) 応答を待つように変更
-command = "curl -sfS -X POST https://tundoku-killer.onrender.com/api/cron/check -H \"Authorization: Bearer ${CRON_SECRET}\" -H \"Content-Type: application/json\" --max-time 600"
+command = "curl -v -X POST https://tundoku-killer.onrender.com/api/cron/check -H \"Authorization: Bearer ${CRON_SECRET}\" -H \"Content-Type: application/json\" --max-time 600 -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64)""
